--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             box-shadow: 0 0 30px rgba(255, 0, 76, 0.6), 0 0 60px rgba(255, 0, 76, 0.3);
         }
 
-        /* Carousel animation */
+        /* Carousel animation - Desktop */
         @keyframes scroll {
             0% {
                 transform: translateX(0);
@@ -62,6 +62,13 @@
 
         .animate-scroll {
             animation: scroll 20s linear infinite;
+        }
+
+        /* Carousel animation - Mobile (más rápido) */
+        @media (max-width: 768px) {
+            .animate-scroll {
+                animation: scroll 12s linear infinite;
+            }
         }
 
         .animate-scroll:hover {
@@ -147,12 +154,106 @@
         .lang-label.active {
             color: white;
         }
+
+        /* Hamburger Menu Styles */
+        .hamburger {
+            cursor: pointer;
+            width: 30px;
+            height: 24px;
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            z-index: 60;
+        }
+
+        .hamburger span {
+            display: block;
+            height: 3px;
+            width: 100%;
+            background: white;
+            border-radius: 3px;
+            transition: all 0.3s ease;
+        }
+
+        .hamburger.active span:nth-child(1) {
+            transform: rotate(45deg) translate(8px, 8px);
+            background: #ff004c;
+        }
+
+        .hamburger.active span:nth-child(2) {
+            opacity: 0;
+        }
+
+        .hamburger.active span:nth-child(3) {
+            transform: rotate(-45deg) translate(8px, -8px);
+            background: #ff004c;
+        }
+
+        /* Mobile Menu */
+        .mobile-menu {
+            position: fixed;
+            top: 0;
+            right: -100%;
+            width: 75%;
+            max-width: 300px;
+            height: 100vh;
+            background: rgba(10, 10, 15, 0.98);
+            backdrop-filter: blur(10px);
+            border-left: 1px solid rgba(255, 0, 76, 0.2);
+            transition: right 0.3s ease;
+            z-index: 55;
+            padding-top: 80px;
+            box-shadow: -5px 0 30px rgba(255, 0, 76, 0.3);
+        }
+
+        .mobile-menu.active {
+            right: 0;
+        }
+
+        .mobile-menu a {
+            display: block;
+            padding: 1rem 2rem;
+            color: white;
+            text-decoration: none;
+            font-size: 1.1rem;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            transition: all 0.3s ease;
+        }
+
+        .mobile-menu a:hover {
+            background: rgba(255, 0, 76, 0.1);
+            color: #ff004c;
+            padding-left: 2.5rem;
+        }
+
+        /* Overlay */
+        .menu-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            background: rgba(0, 0, 0, 0.7);
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.3s ease;
+            z-index: 50;
+        }
+
+        .menu-overlay.active {
+            opacity: 1;
+            visibility: visible;
+        }
     </style>
 </head>
 
 <body class="text-gray-100">
     <!-- Tech Grid Background -->
     <div class="fixed inset-0 tech-grid pointer-events-none"></div>
+
+    <!-- Menu Overlay -->
+    <div class="menu-overlay" id="menuOverlay"></div>
 
     <!-- Navigation -->
     <nav class="fixed top-0 w-full z-50 bg-black/80 backdrop-blur-md border-b border-gray-800">
@@ -174,11 +275,11 @@
                         < />
                     </a>
                 </div>
+
+                <!-- Desktop Menu -->
                 <div class="hidden md:flex space-x-8">
                     <a href="index.html#inicio" class="hover:text-red-500 transition" data-es="Inicio"
                         data-en="Home">Inicio</a>
-                    <!--    <a href="index.html#sobre-mi" class="hover:text-red-500 transition" data-es="Sobre Mí"
-                        data-en="About Me">Sobre Mí</a> -->
                     <a href="index.html#habilidades" class="hover:text-red-500 transition" data-es="Habilidades"
                         data-en="Skills">Habilidades</a>
                     <a href="proyectos.html" class="hover:text-red-500 transition" data-es="Proyectos"
@@ -187,17 +288,35 @@
                         data-en="Contact">Contacto</a>
                 </div>
 
-                <!-- Language Toggle Slider -->
-                <div class="lang-toggle-container" id="langToggle">
-                    <div class="lang-slider" id="langSlider"></div>
-                    <div class="lang-labels">
-                        <span class="lang-label active" id="esLabel">ES</span>
-                        <span class="lang-label" id="enLabel">EN</span>
+                <!-- Right side: Language Toggle + Hamburger -->
+                <div class="flex items-center gap-4">
+                    <!-- Language Toggle Slider -->
+                    <div class="lang-toggle-container" id="langToggle">
+                        <div class="lang-slider" id="langSlider"></div>
+                        <div class="lang-labels">
+                            <span class="lang-label active" id="esLabel">ES</span>
+                            <span class="lang-label" id="enLabel">EN</span>
+                        </div>
+                    </div>
+
+                    <!-- Hamburger Menu (solo móvil) -->
+                    <div class="hamburger md:hidden" id="hamburger">
+                        <span></span>
+                        <span></span>
+                        <span></span>
                     </div>
                 </div>
             </div>
         </div>
     </nav>
+
+    <!-- Mobile Menu -->
+    <div class="mobile-menu" id="mobileMenu">
+        <a href="index.html#inicio" class="menu-link" data-es="Inicio" data-en="Home">Inicio</a>
+        <a href="index.html#habilidades" class="menu-link" data-es="Habilidades" data-en="Skills">Habilidades</a>
+        <a href="proyectos.html" class="menu-link" data-es="Proyectos" data-en="Projects">Proyectos</a>
+        <a href="index.html#contacto" class="menu-link" data-es="Contacto" data-en="Contact">Contacto</a>
+    </div>
 
     <!-- Hero Section -->
     <section id="inicio" class="min-h-screen flex items-center justify-center relative pt-20">
@@ -567,7 +686,7 @@
                                         class="animate-ping absolute inline-flex h-full w-full rounded-full bg-emerald-400 opacity-60"></span>
                                     <span class="relative inline-flex rounded-full h-3 w-3 bg-emerald-400"></span>
                                 </span>
-                                <span class="text-xs text-emerald-300 font-medium">Online</span>
+                                <!--- <span class="text-xs text-emerald-300 font-medium">Online</span> -->
                             </div>
                         </div>
 
@@ -579,7 +698,7 @@
                                     class="w-20 h-20 rounded-2xl bg-gradient-to-tr from-[#ff004c] via-[#ff4b81] to-[#5865F2] p-[2px] shadow-[0_0_25px_rgba(255,0,76,0.4)]">
                                     <div
                                         class="w-full h-full rounded-[0.9rem] bg-[#181824] overflow-hidden flex items-center justify-center">
-                                        <img src="assets/img/armin.gif" alt="Discord Avatar"
+                                        <img src="assets/img/catlaung.gif" alt="Discord Avatar"
                                             class="w-full h-full object-cover" />
                                     </div>
                                 </div>
@@ -634,17 +753,16 @@
         </div>
     </footer>
 
-    <!-- Language Toggle Script with localStorage sync -->
+    <!-- Scripts -->
     <script>
+        // Language Toggle
         const langToggle = document.getElementById('langToggle');
         const langSlider = document.getElementById('langSlider');
         const esLabel = document.getElementById('esLabel');
         const enLabel = document.getElementById('enLabel');
 
-        // Load saved language from localStorage or default to 'es'
         let currentLang = localStorage.getItem('preferredLang') || 'es';
 
-        // Apply saved language on page load
         function applyLanguage(lang) {
             if (lang === 'en') {
                 langSlider.classList.add('en');
@@ -661,14 +779,35 @@
             });
         }
 
-        // Apply language on load
         applyLanguage(currentLang);
 
-        // Toggle language on click
         langToggle.addEventListener('click', () => {
             currentLang = currentLang === 'es' ? 'en' : 'es';
             localStorage.setItem('preferredLang', currentLang);
             applyLanguage(currentLang);
+        });
+
+        // Hamburger Menu
+        const hamburger = document.getElementById('hamburger');
+        const mobileMenu = document.getElementById('mobileMenu');
+        const menuOverlay = document.getElementById('menuOverlay');
+        const menuLinks = document.querySelectorAll('.menu-link');
+
+        function toggleMenu() {
+            hamburger.classList.toggle('active');
+            mobileMenu.classList.toggle('active');
+            menuOverlay.classList.toggle('active');
+            document.body.style.overflow = mobileMenu.classList.contains('active') ? 'hidden' : '';
+        }
+
+        hamburger.addEventListener('click', toggleMenu);
+        menuOverlay.addEventListener('click', toggleMenu);
+
+        // Cerrar menú al hacer clic en un enlace
+        menuLinks.forEach(link => {
+            link.addEventListener('click', () => {
+                toggleMenu();
+            });
         });
     </script>
 </body>
