--- a/proyectos.html
+++ b/proyectos.html
@@ -21,7 +21,7 @@
             overflow-x: hidden;
         }
 
-        /* Animated tech grid background */
+        /* Animated Background */
         .tech-grid {
             background-image:
                 linear-gradient(rgba(255, 0, 76, 0.03) 1px, transparent 1px),
@@ -40,7 +40,7 @@
             }
         }
 
-        /* Red glow effects */
+        /* Glow Effects */
         .glow-red {
             box-shadow: 0 0 20px rgba(255, 0, 76, 0.4), 0 0 40px rgba(255, 0, 76, 0.2);
         }
@@ -49,12 +49,12 @@
             box-shadow: 0 0 30px rgba(255, 0, 76, 0.6), 0 0 60px rgba(255, 0, 76, 0.3);
         }
 
-        /* Smooth scroll */
+        /* Smooth Scroll */
         html {
             scroll-behavior: smooth;
         }
 
-        /* Custom scrollbar */
+        /* Custom Scrollbar */
         ::-webkit-scrollbar {
             width: 10px;
         }
@@ -72,7 +72,7 @@
             background: #ff2264;
         }
 
-        /* Language Toggle Slider */
+        /* Language Toggle */
         .lang-toggle-container {
             position: relative;
             width: 80px;
@@ -122,14 +122,13 @@
             color: white;
         }
 
-        /* Project cover image */
+        /* Project Images */
         .project-cover-img {
             width: 100%;
             height: 192px;
             object-fit: cover;
         }
 
-        /* Project icon (emoji fallback) */
         .project-icon {
             height: 192px;
             display: flex;
@@ -138,7 +137,7 @@
             font-size: 4rem;
         }
 
-        /* Hamburger Menu Styles */
+        /* Hamburger Menu */
         .hamburger {
             cursor: pointer;
             width: 30px;
@@ -210,7 +209,7 @@
             padding-left: 2.5rem;
         }
 
-        /* Overlay */
+        /* Menu Overlay */
         .menu-overlay {
             position: fixed;
             top: 0;
@@ -228,11 +227,59 @@
             opacity: 1;
             visibility: visible;
         }
+
+        /* Responsive Adjustments */
+        @media (max-width: 414px) {
+            .container {
+                padding-left: 1rem;
+                padding-right: 1rem;
+            }
+
+            section h1 {
+                font-size: 2.5rem;
+            }
+
+            section p {
+                font-size: 1rem;
+            }
+
+            section h2 {
+                font-size: 2rem;
+            }
+
+            .grid {
+                gap: 1.5rem;
+            }
+
+            .absolute.top-1\/4,
+            .absolute.bottom-1\/4 {
+                display: none;
+            }
+        }
+
+        @media (max-width: 375px) {
+            section h1 {
+                font-size: 2rem;
+            }
+
+            nav .container {
+                padding: 0.75rem 1rem;
+            }
+
+            nav .w-10 {
+                width: 2rem;
+                height: 1.5rem;
+            }
+
+            nav a {
+                font-size: 1.25rem;
+            }
+        }
     </style>
 </head>
 
 <body class="text-gray-100">
-    <!-- Tech Grid Background -->
+    <!-- Background -->
     <div class="fixed inset-0 tech-grid pointer-events-none"></div>
 
     <!-- Menu Overlay -->
@@ -243,7 +290,6 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <div class="flex items-center gap-3">
-                    <!-- Bandera Argentina -->
                     <div class="w-10 h-7 rounded-[3px] overflow-hidden border border-gray-600 shadow-md">
                         <div class="w-full h-1/3 bg-sky-500"></div>
                         <div class="w-full h-1/3 bg-white flex items-center justify-center text-[10px]">
@@ -252,14 +298,12 @@
                         <div class="w-full h-1/3 bg-sky-500"></div>
                     </div>
 
-                    <!-- Logo texto: < /> -->
                     <a href="index.html"
                         class="text-2xl font-bold tracking-tight text-white hover:text-red-500 transition">
                         < />
                     </a>
                 </div>
 
-                <!-- Desktop Menu -->
                 <div class="hidden md:flex space-x-8">
                     <a href="index.html#inicio" class="hover:text-red-500 transition" data-es="Inicio"
                         data-en="Home">Inicio</a>
@@ -271,9 +315,7 @@
                         data-en="Contact">Contacto</a>
                 </div>
 
-                <!-- Right side: Language Toggle + Hamburger -->
                 <div class="flex items-center gap-4">
-                    <!-- Language Toggle Slider -->
                     <div class="lang-toggle-container" id="langToggle">
                         <div class="lang-slider" id="langSlider"></div>
                         <div class="lang-labels">
@@ -282,7 +324,6 @@
                         </div>
                     </div>
 
-                    <!-- Hamburger Menu (solo móvil) -->
                     <div class="hamburger md:hidden" id="hamburger">
                         <span></span>
                         <span></span>
@@ -301,10 +342,9 @@
         <a href="index.html#contacto" class="menu-link" data-es="Contacto" data-en="Contact">Contacto</a>
     </div>
 
-    <!-- Projects Hero Section -->
+    <!-- Projects Section -->
     <section class="min-h-screen pt-32 pb-20 relative">
         <div class="container mx-auto px-6">
-            <!-- Header -->
             <div class="text-center mb-16">
                 <h1 class="text-5xl md:text-7xl font-black mb-6">
                     <span class="text-red-500">&lt;</span>
@@ -318,7 +358,6 @@
                 </p>
             </div>
 
-            <!-- Proyectos Grilla -->
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 relative z-10">
                 <!-- Servidor Constitución -->
                 <div
@@ -410,7 +449,6 @@
             </div>
         </div>
 
-        <!-- Decorative elements -->
         <div class="absolute top-1/4 left-10 w-20 h-20 border-4 border-red-600/30 rounded-lg rotate-45"></div>
         <div class="absolute bottom-1/4 right-10 w-16 h-16 border-4 border-red-600/30 rounded-lg"></div>
     </section>
@@ -428,7 +466,6 @@
 
     <!-- Scripts -->
     <script>
-        // Language Toggle
         const langToggle = document.getElementById('langToggle');
         const langSlider = document.getElementById('langSlider');
         const esLabel = document.getElementById('esLabel');
@@ -460,7 +497,6 @@
             applyLanguage(currentLang);
         });
 
-        // Hamburger Menu
         const hamburger = document.getElementById('hamburger');
         const mobileMenu = document.getElementById('mobileMenu');
         const menuOverlay = document.getElementById('menuOverlay');
@@ -476,7 +512,6 @@
         hamburger.addEventListener('click', toggleMenu);
         menuOverlay.addEventListener('click', toggleMenu);
 
-        // Cerrar menú al hacer clic en un enlace
         menuLinks.forEach(link => {
             link.addEventListener('click', () => {
                 toggleMenu();
